add front-end service
